--- a/magic_pot_demo_app/Base.lproj/LaunchScreen.storyboard
+++ b/magic_pot_demo_app/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -20,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MagicPot" translatesAutoresizingMaskIntoConstraints="NO" id="maL-87-n6w">
-                                <rect key="frame" x="180" y="236" width="240" height="128"/>
+                                <rect key="frame" x="144.5" y="217" width="311" height="166"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="maL-87-n6w" secondAttribute="height" multiplier="15:8" id="uP6-td-FCu"/>
                                 </constraints>
@@ -28,10 +27,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="maL-87-n6w" secondAttribute="bottom" constant="236" id="Ak7-bK-z0L"/>
-                            <constraint firstItem="maL-87-n6w" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="216" id="Yd9-Vx-aj3"/>
-                            <constraint firstItem="maL-87-n6w" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="160" id="ZrQ-E3-VW7"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="maL-87-n6w" secondAttribute="trailing" constant="160" id="asP-8w-0Ee"/>
+                            <constraint firstItem="maL-87-n6w" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ciO-sX-StV"/>
+                            <constraint firstItem="maL-87-n6w" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="njB-dX-l1m"/>
                         </constraints>
                     </view>
                 </viewController>
