--- a/magic_pod_demo_app/Base.lproj/LaunchScreen.storyboard
+++ b/magic_pod_demo_app/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,8 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="MagicPod" translatesAutoresizingMaskIntoConstraints="NO" id="maL-87-n6w">
-                                <frame key="frameInset" minX="144.5" minY="217" width="311" height="166"/>
+                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MagicPod" translatesAutoresizingMaskIntoConstraints="NO" id="maL-87-n6w">
+                                <rect key="frame" x="32" y="250.5" width="311" height="166"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="maL-87-n6w" secondAttribute="height" multiplier="15:8" id="uP6-td-FCu"/>
                                 </constraints>
@@ -39,6 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="MagicPod" width="200" height="166"/>
+        <image name="MagicPod" width="200" height="166.5"/>
     </resources>
 </document>
