--- a/magic_pod_demo_app/SignUp.storyboard
+++ b/magic_pod_demo_app/SignUp.storyboard
@@ -16,6 +16,10 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Tip-Gz-ygV">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.21833736795774647" green="0.55754841549295775" blue="0.23553036971830985" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="Dai-G3-j2t" kind="relationship" relationship="rootViewController" id="cWS-Cn-dcT"/>
